# sudoku_solver

./: .gitignore  .pre-commit-config.yaml  README.md  example_states.py  example_states.txt  logic_utils.py  main.py  pyproject.toml  render_utils.py  tricks.py  utils.py
.github/workflows/: ruff.yaml
src/sudoku_solver/: __main__.py  example_states.py  logic_utils.py  main.py  render_utils.py  tricks.py
